// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-movable-ink's identify destination action: all fields 1`] = `
Object {
  "anonymous_id": "jWk*N5b5E4VTiB6Q]",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "timezone": "jWk*N5b5E4VTiB6Q]",
  "user_id": "jWk*N5b5E4VTiB6Q]",
}
`;

exports[`Testing snapshot for actions-movable-ink's identify destination action: required fields 1`] = `
Object {
  "anonymous_id": "jWk*N5b5E4VTiB6Q]",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "jWk*N5b5E4VTiB6Q]",
}
`;
